--- a/HOME.html
+++ b/HOME.html
@@ -77,11 +77,59 @@
         </p>
         </div>
         <div class="landing__image">
-          <img src="images/landingImage.png" alt="Salud Vital" />
+          <img src="img/landingImage.png" alt="Salud Vital" />
         </div>
       </section>
+      <section class="page_list__wrapper">
+        <div class="page_list__container">
+          <h2 class="page_list__title">Nuestras categorías</h2>
+            <ul class="page_list__items">
+            <li class="page_list__item">
+              <div class="page_list__item__icon strength">
+                <img src="img/strength.png" alt="Bienestar físico" />
+              </div>
+              <span>Bienestar físico</span>
+              </a>
+            </li>
+            <li class="page_list__item">
+              <div class="page_list__item__icon healthcare">
+                <img src="img/healthcare.png" alt="Prevención de enfermedades" />
+              </div>
+              <span>Prevención de enfermedades</span>
+              </a>
+            </li>
+            <li class="page_list__item">
+              <div class="page_list__item__icon nutrition">
+                <img src="img/restaurant.png" alt="Nutrición básica" />
+              </div>
+              <span>Nutrición básica</span>
+              </a>
+            </li>
+            <li class="page_list__item">
+              <div class="page_list__item__icon healthy-food">
+                <img src="img/healthy-food.png" alt="Alimentos saludables" />
+              </div>
+              <span>Alimentos saludables</span>
+              </a>
+            </li>
+          
+          </ul>
+        </div>
+
+      </section>
       <section class="news_section__wrapper">
+        <div class="custom-shape-divider-top-1758430698">
+          <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+          <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
+          </svg>
+        </div>
+        <div class="custom-shape-divider-top-1758430843">
+          <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+              <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
+          </svg>
+        </div>
         <section class="news__container">
+          <h2 class="news__title">Últimas Noticias</h2>
           <article class="news__item">
             <div class="news__image">
               <img src="https://www.paho.org/sites/default/files/styles/max_1500x1500/public/2025-09/es-ops-convenio-ops-panama.jpg?itok=71a9GngA" alt="" />
