Se aplica correciones a la estructura del proyecto, se dividió el archivo REGISTRO en estilos y estructura, se hicieron correcciones a HOME.html

--- a/BLOG.html
+++ b/BLOG.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BLOG - Salud vital</title>
   <link rel="icon" type="image/png" href="img/icoB.png">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/styleBlog.css">
 </head>
     <body style="background-color: #7d81e7; background-image: url('img/Omelette.jpg'); background-repeat: no-repeat; background-size: 95%; background-position: center;" style="background-attachment: fixed; border-radius: 6px;"> 
       <!-- Contenedor principal de toda la página -->
