--- a/HOME.html
+++ b/HOME.html
@@ -11,13 +11,13 @@
       <header class="header__container">
         <nav class="header_nav__container">
           <ul class="header_nav__list">
-            <li class="header_nav__item"><a href="index.html">Inicio</a></li>
+            <li class="header_nav__item"><a href="HOME.html">Inicio</a></li>
             <li class="header_nav__item"><a href="BLOG.html">Blog</a></li>
-            <li class="header_nav__item"><a href="CONTACT.html">Contactanos</a></li>
+            <li class="header_nav__item"><a href="CONTACTANOS.html">Contáctanos</a></li>
           </ul>
         </nav>
         <button class="news__button">
-                <a href="">
+                <a href="REGISTRO.html">
                   <span>Registrarse</span>
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
