--- a/HOME.html
+++ b/HOME.html
@@ -37,7 +37,6 @@
               </button>
         
       </header>
-
       <section class="landing__container">
         <div class="custom-shape-divider-bottom-1758422374">
           <svg
@@ -238,7 +237,7 @@
         </section>
       </section>
 
-    <footer class="footer__container">
+    <footer id="ftr" class="footer__container">
       <h3>Preguntas frecuentes</h3>
       <div class="footer__questions">
         <h4>¿Cuál es el horario de atención?</h4>
