--- a/REGISTRO.html
+++ b/REGISTRO.html
@@ -59,6 +59,9 @@
                 <label for="Peso">Peso (lbs):</label>
                 <input type="number" id="Peso" name="Peso" placeholder="Ej. 135" required>
 
+                <label for = "Altura">Altura (cm):</label>
+                <input type="number" id="Altura" name="Altura" placeholder="Ej. 175" required>
+
                 <label for="ActividadFisica">Nivel de Actividad Física:</label>
                 <select id="ActividadFisica" name="ActividadFisica" required>
                     <option value="" disabled selected>Seleccione una opción</option>
@@ -100,7 +103,7 @@
                 <button type="submit">Enviar</button>
             </form>
         </div>
-        
+
     </main>
 </body>
 </html>
