Correccion del branch

--- a/HOME.html
+++ b/HOME.html
@@ -37,6 +37,7 @@
               </button>
         
       </header>
+
       <section class="landing__container">
         <div class="custom-shape-divider-bottom-1758422374">
           <svg
@@ -237,7 +238,7 @@
         </section>
       </section>
 
-    <footer id="ftr" class="footer__container">
+    <footer class="footer__container">
       <h3>Preguntas frecuentes</h3>
       <div class="footer__questions">
         <h4>¿Cuál es el horario de atención?</h4>
