cambios de normalizacion, ajustes finales

--- a/BLOG.html
+++ b/BLOG.html
@@ -6,10 +6,16 @@
   <title>BLOG - Salud vital</title>
   <link rel="icon" type="image/png" href="img/icoB.png">
   <link rel="stylesheet" href="styles/styleBlog.css">
+  <link rel="stylesheet" href="styles/home.css">
 </head>
 <body style="background-color: rgb(1, 11, 31); background-image: url('img/Omelette.jpg'); background-repeat: no-repeat; background-size: 95%; background-position: center;" style="background-attachment: fixed; border-radius: 6px;"> 
   <!-- Encabezado con el título y la navegación -->
   <header class="header__container">
+    
+    <div class="logo">
+        <h1>Salud Vital</h1>
+    </div>
+          
     <nav class="header_nav__container">
       <ul class="header_nav__list">
         <li class="header_nav__item"><a href="HOME.html">Inicio</a></li>
