--- a/HOME.html
+++ b/HOME.html
@@ -3,12 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>HOME - Salud Vital</title>
     <link rel="stylesheet" href="styles/home.css" />
   </head>
   <body>
     <main class="main__container">
       <header class="header__container">
+        
+        <div class="logo">
+          <h1>Salud Vital</h1>
+        </div>
+
         <nav class="header_nav__container">
           <ul class="header_nav__list">
             <li class="header_nav__item"><a href="HOME.html">Inicio</a></li>
