--- a/REGISTRO.html
+++ b/REGISTRO.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salud Vital</title>
+    <title>REGISTRO - Salud Vital</title>
     <link rel="stylesheet" href="styles/styleReg.css">
     <link rel="stylesheet" href="styles/home.css">
 
@@ -14,6 +14,9 @@
         
         <!--División para el encabezado que contiene el menú de navegación-->
         <header class="header__container">
+            <div class="logo">
+                <h1>Salud Vital</h1>
+            </div>
         <nav class="header_nav__container">
           <ul class="header_nav__list">
             <li class="header_nav__item"><a href="HOME.html">Inicio</a></li>
